infrastructure/03-apps/blog/manifests/middlewares.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: blog
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: add-trailing-slash
  namespace: blog
spec:
  redirectRegex:
    regex: "^(https?://[^/]+/[^/\\.]+)$"
    replacement: "${1}/"
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-blog-to-root
  namespace: blog
spec:
  redirectRegex:
    regex: "^https?://foobarbaz\\.fr/blog(/.*)?$"
    replacement: "https://foobarbaz.fr${1}"
    permanent: true
