infrastructure/03-apps/blog/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog
spec:
  selector:
    app: blog
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
