infrastructure/03-apps/blog/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: cilium
  rules:
  - host: foobarbaz.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blog
            port:
              number: 80
  - host: tomlab.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blog
            port:
              number: 80
  tls:
  - hosts:
    - foobarbaz.fr
    - tomlab.fr
    secretName: blog-main-tls
